--- a/DumbassThief/DumbassThief.vcproj
+++ b/DumbassThief/DumbassThief.vcproj
@@ -335,6 +335,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Enemy.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\EnemySpawner.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\GameEngine.cpp"
 				>
 			</File>
@@ -384,6 +392,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Enemy.h"
+				>
+			</File>
+			<File
+				RelativePath=".\EnemySpawner.h"
+				>
+			</File>
+			<File
 				RelativePath=".\GameEngine.h"
 				>
 			</File>
@@ -423,7 +439,51 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\House_Door.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\House_DoorTop.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\House_Left.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\House_LeftTop.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\House_Right.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\House_RightTop.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\House_Top.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\House_Wall.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\House_Window.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\menu.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\Street.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\..\..\..\usr\local\psp\devkit\tool\imgconv\textures\tex_Granny.h"
 					>
 				</File>
 				<File
